# server-splash

./: .gitignore  Cargo.toml  README.md  deploy.sh
scripts/: probe_services.py
src/: agent.rs  config.rs  generator.rs  header.txt  machine.rs  main.rs  probe.rs  template.html  wizard.rs
src/modules/: mod.rs
src/modules/cron/: backend.py  generate.rs  mod.rs  module.json  style.css  template.html
src/modules/ollama_ui/: generate.rs  mod.rs  module.json  style.css  template.html
src/modules/systemd/: backend.py  generate.rs  mod.rs  module.json  style.css  template.html
src/ollama-ui/: template.html
src/ollama-ui/css/: style.css
src/ollama_ui/: generator.rs  mod.rs
