[package]
name = "server-splash"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "splash"
path = "src/main.rs"

[dependencies]
dialoguer = { version = "0.11" }
atty = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
dirs = "5"
console = "0.16"
unicode-width = "0.2.2"
sysinfo = "0.33"
